; ModuleID = '/home/carl/AnghaBench/git/extr_alias.c_split_cmdline.c'
source_filename = "/home/carl/AnghaBench/git/extr_alias.c_split_cmdline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SPLIT_CMDLINE_BAD_ENDING = common dso_local global i32 0, align 4
@SPLIT_CMDLINE_UNCLOSED_QUOTE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @split_cmdline(i8* %0, i8*** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8***, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8, align 1
  %11 = alloca i8, align 1
  store i8* %0, i8** %4, align 8
  store i8*** %1, i8**** %5, align 8
  store i32 0, i32* %8, align 4
  store i32 16, i32* %9, align 4
  store i8 0, i8* %10, align 1
  %12 = load i8***, i8**** %5, align 8
  %13 = load i8**, i8*** %12, align 8
  %14 = load i32, i32* %9, align 4
  %15 = call i32 @ALLOC_ARRAY(i8** %13, i32 %14)
  %16 = load i8*, i8** %4, align 8
  %17 = load i8***, i8**** %5, align 8
  %18 = load i8**, i8*** %17, align 8
  %19 = load i32, i32* %8, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %8, align 4
  %21 = sext i32 %19 to i64
  %22 = getelementptr inbounds i8*, i8** %18, i64 %21
  store i8* %16, i8** %22, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %6, align 4
  br label %23

23:                                               ; preds = %145, %2
  %24 = load i8*, i8** %4, align 8
  %25 = load i32, i32* %6, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i8, i8* %24, i64 %26
  %28 = load i8, i8* %27, align 1
  %29 = icmp ne i8 %28, 0
  br i1 %29, label %30, label %146

30:                                               ; preds = %23
  %31 = load i8*, i8** %4, align 8
  %32 = load i32, i32* %6, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i8, i8* %31, i64 %33
  %35 = load i8, i8* %34, align 1
  store i8 %35, i8* %11, align 1
  %36 = load i8, i8* %10, align 1
  %37 = icmp ne i8 %36, 0
  br i1 %37, label %85, label %38

38:                                               ; preds = %30
  %39 = load i8, i8* %11, align 1
  %40 = call i64 @isspace(i8 signext %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %85

42:                                               ; preds = %38
  %43 = load i8*, i8** %4, align 8
  %44 = load i32, i32* %7, align 4
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %7, align 4
  %46 = sext i32 %44 to i64
  %47 = getelementptr inbounds i8, i8* %43, i64 %46
  store i8 0, i8* %47, align 1
  br label %48

48:                                               ; preds = %67, %42
  %49 = load i8*, i8** %4, align 8
  %50 = load i32, i32* %6, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %6, align 4
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds i8, i8* %49, i64 %52
  %54 = load i8, i8* %53, align 1
  %55 = sext i8 %54 to i32
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %57, label %65

57:                                               ; preds = %48
  %58 = load i8*, i8** %4, align 8
  %59 = load i32, i32* %6, align 4
  %60 = sext i32 %59 to i64
  %61 = getelementptr inbounds i8, i8* %58, i64 %60
  %62 = load i8, i8* %61, align 1
  %63 = call i64 @isspace(i8 signext %62)
  %64 = icmp ne i64 %63, 0
  br label %65

65:                                               ; preds = %57, %48
  %66 = phi i1 [ false, %48 ], [ %64, %57 ]
  br i1 %66, label %67, label %68

67:                                               ; preds = %65
  br label %48

68:                                               ; preds = %65
  %69 = load i8***, i8**** %5, align 8
  %70 = load i8**, i8*** %69, align 8
  %71 = load i32, i32* %8, align 4
  %72 = add nsw i32 %71, 1
  %73 = load i32, i32* %9, align 4
  %74 = call i32 @ALLOC_GROW(i8** %70, i32 %72, i32 %73)
  %75 = load i8*, i8** %4, align 8
  %76 = load i32, i32* %7, align 4
  %77 = sext i32 %76 to i64
  %78 = getelementptr inbounds i8, i8* %75, i64 %77
  %79 = load i8***, i8**** %5, align 8
  %80 = load i8**, i8*** %79, align 8
  %81 = load i32, i32* %8, align 4
  %82 = add nsw i32 %81, 1
  store i32 %82, i32* %8, align 4
  %83 = sext i32 %81 to i64
  %84 = getelementptr inbounds i8*, i8** %80, i64 %83
  store i8* %78, i8** %84, align 8
  br label %145

85:                                               ; preds = %38, %30
  %86 = load i8, i8* %10, align 1
  %87 = icmp ne i8 %86, 0
  br i1 %87, label %100, label %88

88:                                               ; preds = %85
  %89 = load i8, i8* %11, align 1
  %90 = sext i8 %89 to i32
  %91 = icmp eq i32 %90, 39
  br i1 %91, label %96, label %92

92:                                               ; preds = %88
  %93 = load i8, i8* %11, align 1
  %94 = sext i8 %93 to i32
  %95 = icmp eq i32 %94, 34
  br i1 %95, label %96, label %100

96:                                               ; preds = %92, %88
  %97 = load i8, i8* %11, align 1
  store i8 %97, i8* %10, align 1
  %98 = load i32, i32* %6, align 4
  %99 = add nsw i32 %98, 1
  store i32 %99, i32* %6, align 4
  br label %144

100:                                              ; preds = %92, %85
  %101 = load i8, i8* %11, align 1
  %102 = sext i8 %101 to i32
  %103 = load i8, i8* %10, align 1
  %104 = sext i8 %103 to i32
  %105 = icmp eq i32 %102, %104
  br i1 %105, label %106, label %109

106:                                              ; preds = %100
  store i8 0, i8* %10, align 1
  %107 = load i32, i32* %6, align 4
  %108 = add nsw i32 %107, 1
  store i32 %108, i32* %6, align 4
  br label %143

109:                                              ; preds = %100
  %110 = load i8, i8* %11, align 1
  %111 = sext i8 %110 to i32
  %112 = icmp eq i32 %111, 92
  br i1 %112, label %113, label %134

113:                                              ; preds = %109
  %114 = load i8, i8* %10, align 1
  %115 = sext i8 %114 to i32
  %116 = icmp ne i32 %115, 39
  br i1 %116, label %117, label %134

117:                                              ; preds = %113
  %118 = load i32, i32* %6, align 4
  %119 = add nsw i32 %118, 1
  store i32 %119, i32* %6, align 4
  %120 = load i8*, i8** %4, align 8
  %121 = load i32, i32* %6, align 4
  %122 = sext i32 %121 to i64
  %123 = getelementptr inbounds i8, i8* %120, i64 %122
  %124 = load i8, i8* %123, align 1
  store i8 %124, i8* %11, align 1
  %125 = load i8, i8* %11, align 1
  %126 = icmp ne i8 %125, 0
  br i1 %126, label %133, label %127

127:                                              ; preds = %117
  %128 = load i8***, i8**** %5, align 8
  %129 = load i8**, i8*** %128, align 8
  %130 = call i32 @FREE_AND_NULL(i8** %129)
  %131 = load i32, i32* @SPLIT_CMDLINE_BAD_ENDING, align 4
  %132 = sub nsw i32 0, %131
  store i32 %132, i32* %3, align 4
  br label %172

133:                                              ; preds = %117
  br label %134

134:                                              ; preds = %133, %113, %109
  %135 = load i8, i8* %11, align 1
  %136 = load i8*, i8** %4, align 8
  %137 = load i32, i32* %7, align 4
  %138 = add nsw i32 %137, 1
  store i32 %138, i32* %7, align 4
  %139 = sext i32 %137 to i64
  %140 = getelementptr inbounds i8, i8* %136, i64 %139
  store i8 %135, i8* %140, align 1
  %141 = load i32, i32* %6, align 4
  %142 = add nsw i32 %141, 1
  store i32 %142, i32* %6, align 4
  br label %143

143:                                              ; preds = %134, %106
  br label %144

144:                                              ; preds = %143, %96
  br label %145

145:                                              ; preds = %144, %68
  br label %23

146:                                              ; preds = %23
  %147 = load i8*, i8** %4, align 8
  %148 = load i32, i32* %7, align 4
  %149 = sext i32 %148 to i64
  %150 = getelementptr inbounds i8, i8* %147, i64 %149
  store i8 0, i8* %150, align 1
  %151 = load i8, i8* %10, align 1
  %152 = icmp ne i8 %151, 0
  br i1 %152, label %153, label %159

153:                                              ; preds = %146
  %154 = load i8***, i8**** %5, align 8
  %155 = load i8**, i8*** %154, align 8
  %156 = call i32 @FREE_AND_NULL(i8** %155)
  %157 = load i32, i32* @SPLIT_CMDLINE_UNCLOSED_QUOTE, align 4
  %158 = sub nsw i32 0, %157
  store i32 %158, i32* %3, align 4
  br label %172

159:                                              ; preds = %146
  %160 = load i8***, i8**** %5, align 8
  %161 = load i8**, i8*** %160, align 8
  %162 = load i32, i32* %8, align 4
  %163 = add nsw i32 %162, 1
  %164 = load i32, i32* %9, align 4
  %165 = call i32 @ALLOC_GROW(i8** %161, i32 %163, i32 %164)
  %166 = load i8***, i8**** %5, align 8
  %167 = load i8**, i8*** %166, align 8
  %168 = load i32, i32* %8, align 4
  %169 = sext i32 %168 to i64
  %170 = getelementptr inbounds i8*, i8** %167, i64 %169
  store i8* null, i8** %170, align 8
  %171 = load i32, i32* %8, align 4
  store i32 %171, i32* %3, align 4
  br label %172

172:                                              ; preds = %159, %153, %127
  %173 = load i32, i32* %3, align 4
  ret i32 %173
}

declare dso_local i32 @ALLOC_ARRAY(i8**, i32) #1

declare dso_local i64 @isspace(i8 signext) #1

declare dso_local i32 @ALLOC_GROW(i8**, i32, i32) #1

declare dso_local i32 @FREE_AND_NULL(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
